New endpoint that exposes new database function
